Tercera Entrega/y.output
Terminals unused in grammar

   C_A
   C_C
   OR


Gramática

    0 $accept: programa $end

    1 programa: program

    2 program: bloq_declaracion sentencias
    3        | sentencias

    4 sentencias: sentencia
    5           | sentencias sentencia

    6 $@1: /* vacío */

    7 bloq_declaracion: DEFVAR $@1 declaraciones ENDDEF

    8 declaraciones: declaracion
    9              | declaraciones declaracion

   10 declaracion: INT DOSPUNTOS lista_ids
   11            | FLOAT DOSPUNTOS lista_ids
   12            | STRING DOSPUNTOS lista_ids

   13 lista_ids: ID
   14          | lista_ids PUNTO_Y_COMA ID

   15 sentencia: asignacion_especial
   16          | asignacion PUNTO_Y_COMA
   17          | decision
   18          | iteracion
   19          | let
   20          | entrada
   21          | salida

   22 $@2: /* vacío */

   23 asignacion: ID OP_ASIG $@2 expresion

   24 $@3: /* vacío */

   25 asignacion: ID OP_ASIG $@3 constanteString

   26 salida: DISPLAY ID PUNTO_Y_COMA
   27       | DISPLAY constanteStringShow PUNTO_Y_COMA

   28 entrada: GET ID PUNTO_Y_COMA

   29 iteracion: WHILE P_A condicion P_C L_A sentencia L_C

   30 decision: IF P_A condicion P_C L_A sentencia L_C

   31 $@4: /* vacío */

   32 $@5: /* vacío */

   33 decision: IF P_A condicion P_C L_A sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

   34 $@6: /* vacío */

   35 condicion: expresion $@6 CMP_MAY expresion

   36 $@7: /* vacío */

   37 condicion: expresion $@7 CMP_MEN expresion

   38 $@8: /* vacío */

   39 condicion: expresion $@8 CMP_MAYI expresion

   40 $@9: /* vacío */

   41 condicion: expresion $@9 CMP_MENI expresion

   42 $@10: /* vacío */

   43 condicion: expresion $@10 CMP_DIST expresion

   44 $@11: /* vacío */

   45 condicion: expresion $@11 CMP_IGUAL expresion

   46 $@12: /* vacío */

   47 condicion: P_A condicion $@12 P_C AND P_A condicion P_C

   48 $@13: /* vacío */

   49 condicion: NOT expresion $@13 CMP_MAY expresion

   50 $@14: /* vacío */

   51 condicion: NOT expresion $@14 CMP_MEN expresion

   52 $@15: /* vacío */

   53 condicion: NOT expresion $@15 CMP_MAYI expresion

   54 $@16: /* vacío */

   55 condicion: NOT expresion $@16 CMP_MENI expresion

   56 $@17: /* vacío */

   57 condicion: NOT expresion $@17 CMP_DIST expresion

   58 $@18: /* vacío */

   59 condicion: NOT expresion $@18 CMP_IGUAL expresion

   60 expresion: expresion OP_SUM termino
   61          | expresion OP_RES termino
   62          | termino

   63 termino: termino OP_MUL factor
   64        | termino OP_DIV factor
   65        | factor

   66 factor: P_A expresion P_C
   67       | ID
   68       | constanteNumerica

   69 constanteNumerica: CONST_INT
   70                  | CONST_REAL

   71 constanteString: CONST_STR

   72 constanteStringShow: CONST_STR

   73 $@19: /* vacío */

   74 let: LET_SIM $@19 cont_ids OP_IGUAL P_A cont_exp P_C

   75 cont_ids: cont_ids COMA ID
   76         | ID

   77 cont_exp: cont_exp PUNTO_Y_COMA expresion
   78         | expresion

   79 asignacion_especial: ID AE_MAIG ID
   80                    | ID AE_MEIG ID
   81                    | ID AE_MUIG ID
   82                    | ID AE_DIIG ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DEFVAR (258) 7
ENDDEF (259) 7
INT (260) 10
FLOAT (261) 11
STRING (262) 12
CONST_REAL (263) 70
CONST_INT (264) 69
CONST_STR (265) 71 72
DISPLAY (266) 26 27
GET (267) 28
IF (268) 30 33
ELSE (269) 33
WHILE (270) 29
P_A (271) 29 30 33 47 66 74
P_C (272) 29 30 33 47 66 74
C_A (273)
C_C (274)
L_A (275) 29 30 33
L_C (276) 29 30 33
PUNTO_Y_COMA (277) 14 16 26 27 28 77
COMA (278) 75
DOSPUNTOS (279) 10 11 12
CMP_MAY (280) 35 49
CMP_MEN (281) 37 51
CMP_MAYI (282) 39 53
CMP_MENI (283) 41 55
CMP_DIST (284) 43 57
CMP_IGUAL (285) 45 59
OP_SUM (286) 60
OP_RES (287) 61
OP_DIV (288) 64
OP_MUL (289) 63
AND (290) 47
OR (291)
NOT (292) 49 51 53 55 57 59
ID (293) 13 14 23 25 26 28 67 75 76 79 80 81 82
OP_ASIG (294) 23 25
LET_SIM (295) 74
OP_IGUAL (296) 74
AE_MAIG (297) 79
AE_MEIG (298) 80
AE_MUIG (299) 81
AE_DIIG (300) 82


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
programa (47)
    en la izquierda: 1, en la derecha: 0
program (48)
    en la izquierda: 2 3, en la derecha: 1
sentencias (49)
    en la izquierda: 4 5, en la derecha: 2 3 5
bloq_declaracion (50)
    en la izquierda: 7, en la derecha: 2
$@1 (51)
    en la izquierda: 6, en la derecha: 7
declaraciones (52)
    en la izquierda: 8 9, en la derecha: 7 9
declaracion (53)
    en la izquierda: 10 11 12, en la derecha: 8 9
lista_ids (54)
    en la izquierda: 13 14, en la derecha: 10 11 12 14
sentencia (55)
    en la izquierda: 15 16 17 18 19 20 21, en la derecha: 4 5 29 30
    33
asignacion (56)
    en la izquierda: 23 25, en la derecha: 16
$@2 (57)
    en la izquierda: 22, en la derecha: 23
$@3 (58)
    en la izquierda: 24, en la derecha: 25
salida (59)
    en la izquierda: 26 27, en la derecha: 21
entrada (60)
    en la izquierda: 28, en la derecha: 20
iteracion (61)
    en la izquierda: 29, en la derecha: 18
decision (62)
    en la izquierda: 30 33, en la derecha: 17
$@4 (63)
    en la izquierda: 31, en la derecha: 33
$@5 (64)
    en la izquierda: 32, en la derecha: 33
condicion (65)
    en la izquierda: 35 37 39 41 43 45 47 49 51 53 55 57 59, en la derecha:
    29 30 33 47
$@6 (66)
    en la izquierda: 34, en la derecha: 35
$@7 (67)
    en la izquierda: 36, en la derecha: 37
$@8 (68)
    en la izquierda: 38, en la derecha: 39
$@9 (69)
    en la izquierda: 40, en la derecha: 41
$@10 (70)
    en la izquierda: 42, en la derecha: 43
$@11 (71)
    en la izquierda: 44, en la derecha: 45
$@12 (72)
    en la izquierda: 46, en la derecha: 47
$@13 (73)
    en la izquierda: 48, en la derecha: 49
$@14 (74)
    en la izquierda: 50, en la derecha: 51
$@15 (75)
    en la izquierda: 52, en la derecha: 53
$@16 (76)
    en la izquierda: 54, en la derecha: 55
$@17 (77)
    en la izquierda: 56, en la derecha: 57
$@18 (78)
    en la izquierda: 58, en la derecha: 59
expresion (79)
    en la izquierda: 60 61 62, en la derecha: 23 35 37 39 41 43 45
    49 51 53 55 57 59 60 61 66 77 78
termino (80)
    en la izquierda: 63 64 65, en la derecha: 60 61 62 63 64
factor (81)
    en la izquierda: 66 67 68, en la derecha: 63 64 65
constanteNumerica (82)
    en la izquierda: 69 70, en la derecha: 68
constanteString (83)
    en la izquierda: 71, en la derecha: 25
constanteStringShow (84)
    en la izquierda: 72, en la derecha: 27
let (85)
    en la izquierda: 74, en la derecha: 19
$@19 (86)
    en la izquierda: 73, en la derecha: 74
cont_ids (87)
    en la izquierda: 75 76, en la derecha: 74 75
cont_exp (88)
    en la izquierda: 77 78, en la derecha: 74 77
asignacion_especial (89)
    en la izquierda: 79 80 81 82, en la derecha: 15


estado 0

    0 $accept: . programa $end

    DEFVAR   desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    programa             ir al estado 8
    program              ir al estado 9
    sentencias           ir al estado 10
    bloq_declaracion     ir al estado 11
    sentencia            ir al estado 12
    asignacion           ir al estado 13
    salida               ir al estado 14
    entrada              ir al estado 15
    iteracion            ir al estado 16
    decision             ir al estado 17
    let                  ir al estado 18
    asignacion_especial  ir al estado 19


estado 1

    7 bloq_declaracion: DEFVAR . $@1 declaraciones ENDDEF

    $default  reduce usando la regla 6 ($@1)

    $@1  ir al estado 20


estado 2

   26 salida: DISPLAY . ID PUNTO_Y_COMA
   27       | DISPLAY . constanteStringShow PUNTO_Y_COMA

    CONST_STR  desplazar e ir al estado 21
    ID         desplazar e ir al estado 22

    constanteStringShow  ir al estado 23


estado 3

   28 entrada: GET . ID PUNTO_Y_COMA

    ID  desplazar e ir al estado 24


estado 4

   30 decision: IF . P_A condicion P_C L_A sentencia L_C
   33         | IF . P_A condicion P_C L_A sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

    P_A  desplazar e ir al estado 25


estado 5

   29 iteracion: WHILE . P_A condicion P_C L_A sentencia L_C

    P_A  desplazar e ir al estado 26


estado 6

   23 asignacion: ID . OP_ASIG $@2 expresion
   25           | ID . OP_ASIG $@3 constanteString
   79 asignacion_especial: ID . AE_MAIG ID
   80                    | ID . AE_MEIG ID
   81                    | ID . AE_MUIG ID
   82                    | ID . AE_DIIG ID

    OP_ASIG  desplazar e ir al estado 27
    AE_MAIG  desplazar e ir al estado 28
    AE_MEIG  desplazar e ir al estado 29
    AE_MUIG  desplazar e ir al estado 30
    AE_DIIG  desplazar e ir al estado 31


estado 7

   74 let: LET_SIM . $@19 cont_ids OP_IGUAL P_A cont_exp P_C

    $default  reduce usando la regla 73 ($@19)

    $@19  ir al estado 32


estado 8

    0 $accept: programa . $end

    $end  desplazar e ir al estado 33


estado 9

    1 programa: program .

    $default  reduce usando la regla 1 (programa)


estado 10

    3 program: sentencias .
    5 sentencias: sentencias . sentencia

    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (program)

    sentencia            ir al estado 34
    asignacion           ir al estado 13
    salida               ir al estado 14
    entrada              ir al estado 15
    iteracion            ir al estado 16
    decision             ir al estado 17
    let                  ir al estado 18
    asignacion_especial  ir al estado 19


estado 11

    2 program: bloq_declaracion . sentencias

    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    sentencias           ir al estado 35
    sentencia            ir al estado 12
    asignacion           ir al estado 13
    salida               ir al estado 14
    entrada              ir al estado 15
    iteracion            ir al estado 16
    decision             ir al estado 17
    let                  ir al estado 18
    asignacion_especial  ir al estado 19


estado 12

    4 sentencias: sentencia .

    $default  reduce usando la regla 4 (sentencias)


estado 13

   16 sentencia: asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 36


estado 14

   21 sentencia: salida .

    $default  reduce usando la regla 21 (sentencia)


estado 15

   20 sentencia: entrada .

    $default  reduce usando la regla 20 (sentencia)


estado 16

   18 sentencia: iteracion .

    $default  reduce usando la regla 18 (sentencia)


estado 17

   17 sentencia: decision .

    $default  reduce usando la regla 17 (sentencia)


estado 18

   19 sentencia: let .

    $default  reduce usando la regla 19 (sentencia)


estado 19

   15 sentencia: asignacion_especial .

    $default  reduce usando la regla 15 (sentencia)


estado 20

    7 bloq_declaracion: DEFVAR $@1 . declaraciones ENDDEF

    INT     desplazar e ir al estado 37
    FLOAT   desplazar e ir al estado 38
    STRING  desplazar e ir al estado 39

    declaraciones  ir al estado 40
    declaracion    ir al estado 41


estado 21

   72 constanteStringShow: CONST_STR .

    $default  reduce usando la regla 72 (constanteStringShow)


estado 22

   26 salida: DISPLAY ID . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 42


estado 23

   27 salida: DISPLAY constanteStringShow . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 43


estado 24

   28 entrada: GET ID . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 44


estado 25

   30 decision: IF P_A . condicion P_C L_A sentencia L_C
   33         | IF P_A . condicion P_C L_A sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47
    NOT         desplazar e ir al estado 48
    ID          desplazar e ir al estado 49

    condicion          ir al estado 50
    expresion          ir al estado 51
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 26

   29 iteracion: WHILE P_A . condicion P_C L_A sentencia L_C

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47
    NOT         desplazar e ir al estado 48
    ID          desplazar e ir al estado 49

    condicion          ir al estado 55
    expresion          ir al estado 51
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 27

   23 asignacion: ID OP_ASIG . $@2 expresion
   25           | ID OP_ASIG . $@3 constanteString

    CONST_STR  reduce usando la regla 24 ($@3)
    $default   reduce usando la regla 22 ($@2)

    $@2  ir al estado 56
    $@3  ir al estado 57


estado 28

   79 asignacion_especial: ID AE_MAIG . ID

    ID  desplazar e ir al estado 58


estado 29

   80 asignacion_especial: ID AE_MEIG . ID

    ID  desplazar e ir al estado 59


estado 30

   81 asignacion_especial: ID AE_MUIG . ID

    ID  desplazar e ir al estado 60


estado 31

   82 asignacion_especial: ID AE_DIIG . ID

    ID  desplazar e ir al estado 61


estado 32

   74 let: LET_SIM $@19 . cont_ids OP_IGUAL P_A cont_exp P_C

    ID  desplazar e ir al estado 62

    cont_ids  ir al estado 63


estado 33

    0 $accept: programa $end .

    $default  aceptar


estado 34

    5 sentencias: sentencias sentencia .

    $default  reduce usando la regla 5 (sentencias)


estado 35

    2 program: bloq_declaracion sentencias .
    5 sentencias: sentencias . sentencia

    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    $default  reduce usando la regla 2 (program)

    sentencia            ir al estado 34
    asignacion           ir al estado 13
    salida               ir al estado 14
    entrada              ir al estado 15
    iteracion            ir al estado 16
    decision             ir al estado 17
    let                  ir al estado 18
    asignacion_especial  ir al estado 19


estado 36

   16 sentencia: asignacion PUNTO_Y_COMA .

    $default  reduce usando la regla 16 (sentencia)


estado 37

   10 declaracion: INT . DOSPUNTOS lista_ids

    DOSPUNTOS  desplazar e ir al estado 64


estado 38

   11 declaracion: FLOAT . DOSPUNTOS lista_ids

    DOSPUNTOS  desplazar e ir al estado 65


estado 39

   12 declaracion: STRING . DOSPUNTOS lista_ids

    DOSPUNTOS  desplazar e ir al estado 66


estado 40

    7 bloq_declaracion: DEFVAR $@1 declaraciones . ENDDEF
    9 declaraciones: declaraciones . declaracion

    ENDDEF  desplazar e ir al estado 67
    INT     desplazar e ir al estado 37
    FLOAT   desplazar e ir al estado 38
    STRING  desplazar e ir al estado 39

    declaracion  ir al estado 68


estado 41

    8 declaraciones: declaracion .

    $default  reduce usando la regla 8 (declaraciones)


estado 42

   26 salida: DISPLAY ID PUNTO_Y_COMA .

    $default  reduce usando la regla 26 (salida)


estado 43

   27 salida: DISPLAY constanteStringShow PUNTO_Y_COMA .

    $default  reduce usando la regla 27 (salida)


estado 44

   28 entrada: GET ID PUNTO_Y_COMA .

    $default  reduce usando la regla 28 (entrada)


estado 45

   70 constanteNumerica: CONST_REAL .

    $default  reduce usando la regla 70 (constanteNumerica)


estado 46

   69 constanteNumerica: CONST_INT .

    $default  reduce usando la regla 69 (constanteNumerica)


estado 47

   47 condicion: P_A . condicion $@12 P_C AND P_A condicion P_C
   66 factor: P_A . expresion P_C

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47
    NOT         desplazar e ir al estado 48
    ID          desplazar e ir al estado 49

    condicion          ir al estado 69
    expresion          ir al estado 70
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 48

   49 condicion: NOT . expresion $@13 CMP_MAY expresion
   51          | NOT . expresion $@14 CMP_MEN expresion
   53          | NOT . expresion $@15 CMP_MAYI expresion
   55          | NOT . expresion $@16 CMP_MENI expresion
   57          | NOT . expresion $@17 CMP_DIST expresion
   59          | NOT . expresion $@18 CMP_IGUAL expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 72
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 49

   67 factor: ID .

    $default  reduce usando la regla 67 (factor)


estado 50

   30 decision: IF P_A condicion . P_C L_A sentencia L_C
   33         | IF P_A condicion . P_C L_A sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

    P_C  desplazar e ir al estado 73


estado 51

   35 condicion: expresion . $@6 CMP_MAY expresion
   37          | expresion . $@7 CMP_MEN expresion
   39          | expresion . $@8 CMP_MAYI expresion
   41          | expresion . $@9 CMP_MENI expresion
   43          | expresion . $@10 CMP_DIST expresion
   45          | expresion . $@11 CMP_IGUAL expresion
   60 expresion: expresion . OP_SUM termino
   61          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 74
    OP_RES  desplazar e ir al estado 75

    CMP_MEN    reduce usando la regla 36 ($@7)
    CMP_MAYI   reduce usando la regla 38 ($@8)
    CMP_MENI   reduce usando la regla 40 ($@9)
    CMP_DIST   reduce usando la regla 42 ($@10)
    CMP_IGUAL  reduce usando la regla 44 ($@11)
    $default   reduce usando la regla 34 ($@6)

    $@6   ir al estado 76
    $@7   ir al estado 77
    $@8   ir al estado 78
    $@9   ir al estado 79
    $@10  ir al estado 80
    $@11  ir al estado 81


estado 52

   62 expresion: termino .
   63 termino: termino . OP_MUL factor
   64        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 82
    OP_MUL  desplazar e ir al estado 83

    $default  reduce usando la regla 62 (expresion)


estado 53

   65 termino: factor .

    $default  reduce usando la regla 65 (termino)


estado 54

   68 factor: constanteNumerica .

    $default  reduce usando la regla 68 (factor)


estado 55

   29 iteracion: WHILE P_A condicion . P_C L_A sentencia L_C

    P_C  desplazar e ir al estado 84


estado 56

   23 asignacion: ID OP_ASIG $@2 . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 85
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 57

   25 asignacion: ID OP_ASIG $@3 . constanteString

    CONST_STR  desplazar e ir al estado 86

    constanteString  ir al estado 87


estado 58

   79 asignacion_especial: ID AE_MAIG ID .

    $default  reduce usando la regla 79 (asignacion_especial)


estado 59

   80 asignacion_especial: ID AE_MEIG ID .

    $default  reduce usando la regla 80 (asignacion_especial)


estado 60

   81 asignacion_especial: ID AE_MUIG ID .

    $default  reduce usando la regla 81 (asignacion_especial)


estado 61

   82 asignacion_especial: ID AE_DIIG ID .

    $default  reduce usando la regla 82 (asignacion_especial)


estado 62

   76 cont_ids: ID .

    $default  reduce usando la regla 76 (cont_ids)


estado 63

   74 let: LET_SIM $@19 cont_ids . OP_IGUAL P_A cont_exp P_C
   75 cont_ids: cont_ids . COMA ID

    COMA      desplazar e ir al estado 88
    OP_IGUAL  desplazar e ir al estado 89


estado 64

   10 declaracion: INT DOSPUNTOS . lista_ids

    ID  desplazar e ir al estado 90

    lista_ids  ir al estado 91


estado 65

   11 declaracion: FLOAT DOSPUNTOS . lista_ids

    ID  desplazar e ir al estado 90

    lista_ids  ir al estado 92


estado 66

   12 declaracion: STRING DOSPUNTOS . lista_ids

    ID  desplazar e ir al estado 90

    lista_ids  ir al estado 93


estado 67

    7 bloq_declaracion: DEFVAR $@1 declaraciones ENDDEF .

    $default  reduce usando la regla 7 (bloq_declaracion)


estado 68

    9 declaraciones: declaraciones declaracion .

    $default  reduce usando la regla 9 (declaraciones)


estado 69

   47 condicion: P_A condicion . $@12 P_C AND P_A condicion P_C

    $default  reduce usando la regla 46 ($@12)

    $@12  ir al estado 94


estado 70

   35 condicion: expresion . $@6 CMP_MAY expresion
   37          | expresion . $@7 CMP_MEN expresion
   39          | expresion . $@8 CMP_MAYI expresion
   41          | expresion . $@9 CMP_MENI expresion
   43          | expresion . $@10 CMP_DIST expresion
   45          | expresion . $@11 CMP_IGUAL expresion
   60 expresion: expresion . OP_SUM termino
   61          | expresion . OP_RES termino
   66 factor: P_A expresion . P_C

    P_C     desplazar e ir al estado 95
    OP_SUM  desplazar e ir al estado 74
    OP_RES  desplazar e ir al estado 75

    CMP_MEN    reduce usando la regla 36 ($@7)
    CMP_MAYI   reduce usando la regla 38 ($@8)
    CMP_MENI   reduce usando la regla 40 ($@9)
    CMP_DIST   reduce usando la regla 42 ($@10)
    CMP_IGUAL  reduce usando la regla 44 ($@11)
    $default   reduce usando la regla 34 ($@6)

    $@6   ir al estado 76
    $@7   ir al estado 77
    $@8   ir al estado 78
    $@9   ir al estado 79
    $@10  ir al estado 80
    $@11  ir al estado 81


estado 71

   66 factor: P_A . expresion P_C

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 96
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 72

   49 condicion: NOT expresion . $@13 CMP_MAY expresion
   51          | NOT expresion . $@14 CMP_MEN expresion
   53          | NOT expresion . $@15 CMP_MAYI expresion
   55          | NOT expresion . $@16 CMP_MENI expresion
   57          | NOT expresion . $@17 CMP_DIST expresion
   59          | NOT expresion . $@18 CMP_IGUAL expresion
   60 expresion: expresion . OP_SUM termino
   61          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 74
    OP_RES  desplazar e ir al estado 75

    CMP_MEN    reduce usando la regla 50 ($@14)
    CMP_MAYI   reduce usando la regla 52 ($@15)
    CMP_MENI   reduce usando la regla 54 ($@16)
    CMP_DIST   reduce usando la regla 56 ($@17)
    CMP_IGUAL  reduce usando la regla 58 ($@18)
    $default   reduce usando la regla 48 ($@13)

    $@13  ir al estado 97
    $@14  ir al estado 98
    $@15  ir al estado 99
    $@16  ir al estado 100
    $@17  ir al estado 101
    $@18  ir al estado 102


estado 73

   30 decision: IF P_A condicion P_C . L_A sentencia L_C
   33         | IF P_A condicion P_C . L_A sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

    L_A  desplazar e ir al estado 103


estado 74

   60 expresion: expresion OP_SUM . termino

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    termino            ir al estado 104
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 75

   61 expresion: expresion OP_RES . termino

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    termino            ir al estado 105
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 76

   35 condicion: expresion $@6 . CMP_MAY expresion

    CMP_MAY  desplazar e ir al estado 106


estado 77

   37 condicion: expresion $@7 . CMP_MEN expresion

    CMP_MEN  desplazar e ir al estado 107


estado 78

   39 condicion: expresion $@8 . CMP_MAYI expresion

    CMP_MAYI  desplazar e ir al estado 108


estado 79

   41 condicion: expresion $@9 . CMP_MENI expresion

    CMP_MENI  desplazar e ir al estado 109


estado 80

   43 condicion: expresion $@10 . CMP_DIST expresion

    CMP_DIST  desplazar e ir al estado 110


estado 81

   45 condicion: expresion $@11 . CMP_IGUAL expresion

    CMP_IGUAL  desplazar e ir al estado 111


estado 82

   64 termino: termino OP_DIV . factor

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    factor             ir al estado 112
    constanteNumerica  ir al estado 54


estado 83

   63 termino: termino OP_MUL . factor

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    factor             ir al estado 113
    constanteNumerica  ir al estado 54


estado 84

   29 iteracion: WHILE P_A condicion P_C . L_A sentencia L_C

    L_A  desplazar e ir al estado 114


estado 85

   23 asignacion: ID OP_ASIG $@2 expresion .
   60 expresion: expresion . OP_SUM termino
   61          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 74
    OP_RES  desplazar e ir al estado 75

    $default  reduce usando la regla 23 (asignacion)


estado 86

   71 constanteString: CONST_STR .

    $default  reduce usando la regla 71 (constanteString)


estado 87

   25 asignacion: ID OP_ASIG $@3 constanteString .

    $default  reduce usando la regla 25 (asignacion)


estado 88

   75 cont_ids: cont_ids COMA . ID

    ID  desplazar e ir al estado 115


estado 89

   74 let: LET_SIM $@19 cont_ids OP_IGUAL . P_A cont_exp P_C

    P_A  desplazar e ir al estado 116


estado 90

   13 lista_ids: ID .

    $default  reduce usando la regla 13 (lista_ids)


estado 91

   10 declaracion: INT DOSPUNTOS lista_ids .
   14 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  desplazar e ir al estado 117

    $default  reduce usando la regla 10 (declaracion)


estado 92

   11 declaracion: FLOAT DOSPUNTOS lista_ids .
   14 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  desplazar e ir al estado 117

    $default  reduce usando la regla 11 (declaracion)


estado 93

   12 declaracion: STRING DOSPUNTOS lista_ids .
   14 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  desplazar e ir al estado 117

    $default  reduce usando la regla 12 (declaracion)


estado 94

   47 condicion: P_A condicion $@12 . P_C AND P_A condicion P_C

    P_C  desplazar e ir al estado 118


estado 95

   66 factor: P_A expresion P_C .

    $default  reduce usando la regla 66 (factor)


estado 96

   60 expresion: expresion . OP_SUM termino
   61          | expresion . OP_RES termino
   66 factor: P_A expresion . P_C

    P_C     desplazar e ir al estado 95
    OP_SUM  desplazar e ir al estado 74
    OP_RES  desplazar e ir al estado 75


estado 97

   49 condicion: NOT expresion $@13 . CMP_MAY expresion

    CMP_MAY  desplazar e ir al estado 119


estado 98

   51 condicion: NOT expresion $@14 . CMP_MEN expresion

    CMP_MEN  desplazar e ir al estado 120


estado 99

   53 condicion: NOT expresion $@15 . CMP_MAYI expresion

    CMP_MAYI  desplazar e ir al estado 121


estado 100

   55 condicion: NOT expresion $@16 . CMP_MENI expresion

    CMP_MENI  desplazar e ir al estado 122


estado 101

   57 condicion: NOT expresion $@17 . CMP_DIST expresion

    CMP_DIST  desplazar e ir al estado 123


estado 102

   59 condicion: NOT expresion $@18 . CMP_IGUAL expresion

    CMP_IGUAL  desplazar e ir al estado 124


estado 103

   30 decision: IF P_A condicion P_C L_A . sentencia L_C
   33         | IF P_A condicion P_C L_A . sentencia L_C $@4 ELSE $@5 L_A sentencia L_C

    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    sentencia            ir al estado 125
    asignacion           ir al estado 13
    salida               ir al estado 14
    entrada              ir al estado 15
    iteracion            ir al estado 16
    decision             ir al estado 17
    let                  ir al estado 18
    asignacion_especial  ir al estado 19


estado 104

   60 expresion: expresion OP_SUM termino .
   63 termino: termino . OP_MUL factor
   64        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 82
    OP_MUL  desplazar e ir al estado 83

    $default  reduce usando la regla 60 (expresion)


estado 105

   61 expresion: expresion OP_RES termino .
   63 termino: termino . OP_MUL factor
   64        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 82
    OP_MUL  desplazar e ir al estado 83

    $default  reduce usando la regla 61 (expresion)


estado 106

   35 condicion: expresion $@6 CMP_MAY . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 126
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 107

   37 condicion: expresion $@7 CMP_MEN . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 127
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 108

   39 condicion: expresion $@8 CMP_MAYI . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 128
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 109

   41 condicion: expresion $@9 CMP_MENI . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 129
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 110

   43 condicion: expresion $@10 CMP_DIST . expresion

    CONST_REAL  desplazar e ir al estado 45
    CONST_INT   desplazar e ir al estado 46
    P_A         desplazar e ir al estado 71
    ID          desplazar e ir al estado 49

    expresion          ir al estado 130
    termino            ir al estado 52
    factor             ir al estado 53
    constanteNumerica  ir al estado 54


estado 111

   45 condicion: expresion $@11 CMP_IGUAL . expresion
